--- a/public/serverino_index.html
+++ b/public/serverino_index.html
@@ -13,22 +13,16 @@
   </head>
 
   <body>
+    <div class="role-announcement" style="background-color: #0044ff">
+      <h1>
+        You are a Server. <br /><br />
+        Find your place in the room
+      </h1>
 
-    <div class="role-announcement" style="background-color: #0044ff;">
-      <h1>You are a Server. <br><br>
-        Find your place in the room</h1>
-       
-      <div
-          class="btn bottomnav role-accepted"
-          type="submit"
-          id="send-button"
-          style="margin-top: 33px"
-        >
-          Ok
-        </div>
+      <div class="btn bottomnav role-accepted" type="submit" id="send-button" style="margin-top: 33px">Ok</div>
     </div>
 
-    <p id="receive" style="display:none"></p>
+    <input type="text" id="receive" style="display: none" />
 
     <div class="topnav">
       <div class="navbtn active" id="collect">Collect</div>
@@ -40,7 +34,6 @@
     <div class="collect-container container active">
       <div class="camera-container"></div>
       <h1>Frame the screen of a client to collect the message</h1>
-      
     </div>
 
     <!-- CHAT -->
@@ -48,131 +41,123 @@
       <div class="messages-container"></div>
     </div>
 
-    <div class="box" id="ascicanvas2" style="display:none"></div>
+    <div class="box" id="ascicanvas2" style="display: none"></div>
     <div class="bottomnav" type="submit" id="done-button1" style="display: none; margin-top: 9px">Done</div>
 
     <script src="serverino_sketch.js"></script>
 
-
     <!-- *************************** CODICE ASCII *************************** -->
 
-<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+    <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
-<script type="importmap">
-{
-  "imports": {
-    "three": "../node_modules/three/build/three.module.js",
-    "three/addons/": "./jsm/"
-  }
-}
-</script>
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "../node_modules/three/build/three.module.js",
+          "three/addons/": "./jsm/"
+        }
+      }
+    </script>
 
-<script type="module">
+    <script type="module">
+      import * as THREE from "three";
 
-import * as THREE from "three";
+      import { AsciiEffect } from "./jsm/effects/AsciiEffect.js";
+      import { PolyhedronGeometry } from "./node_modules/three/src/geometries/PolyhedronGeometry.js";
 
-import { AsciiEffect } from "./jsm/effects/AsciiEffect.js";
-import { PolyhedronGeometry } from "./node_modules/three/src/geometries/PolyhedronGeometry.js";
+      let camera, scene, renderer;
+      let cameraTarget = new THREE.Vector3(0, 0, 0);
+      let effect = [];
+      let sphere;
+      let a = 0;
+      const start = Date.now();
 
+      let directionalLight1;
+      let directionalLight2;
 
-let camera, scene, renderer;
-let cameraTarget = new THREE.Vector3(0, 0, 0);
-let effect = [];
-let sphere;
-let a = 0;
-const start = Date.now();
+      let messageReceived = document.getElementById("receive").value;
+      let raggioServer;
+      let facceServer;
+      let nParoleS;
 
-let directionalLight1;
-let directionalLight2;
+      // $("body").on("DOMSubtreeModified", "#receive", function () {
+      //   console.log("CE L'ABBIAMO FATTA");
+      //   raggioServer = Math.round(map_range(messageReceived.length, 0, 50, 120, 600));
+      //   nParoleS = messageReceived.split(" ").length;
+      //   facceServer = Math.round(map_range(nParoleS, 1, 10, 0, 5));
 
-let messageReceived = document.getElementById("receive").innerHTML;
-let raggioServer = 240;
-let facceServer = 3;
-let nParoleS;
+      //   init();
+      // });
 
-$("body").on('DOMSubtreeModified', "#receive", function() {
-  raggioServer = Math.round(map_range(messageReceived.length, 0, 50, 120, 600));
-  nParoleS = messageReceived.split(" ").length;
-  facceServer = Math.round(map_range(nParoleS, 1, 10, 0, 5)); 
-  
-  init();
-});
+      // document.querySelector("#receive").addEventListener("change", init);
+      // document.querySelector("#receive").addEventListener("input", init);
+      init();
 
-init();
+      function init() {
+        console.log("OOOOOO");
+        raggioServer = Math.floor(Math.random() * (250 - 170) + 170);
+        facceServer = Math.floor(Math.random() * (5 - 0) + 0);
+        camera = new THREE.PerspectiveCamera(100, window.innerWidth / window.innerHeight, 1, 1000);
+        camera.position.x = 500;
 
-function init() {
-  console.log("OOOOOO");
-  camera = new THREE.PerspectiveCamera(100, window.innerWidth / window.innerHeight, 1, 1000);
-  camera.position.x = 500;
+        scene = new THREE.Scene();
 
-  scene = new THREE.Scene();
+        lights();
 
-  lights();
+        sphere = new THREE.Mesh(new THREE.TetrahedronGeometry(raggioServer, facceServer), new THREE.MeshPhongMaterial({ color: "green", flatShading: true }));
+        sphere.name = "sphere";
+        scene.add(sphere);
 
+        renderer = new THREE.WebGLRenderer({ alpha: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
 
+        effect.push(new AsciiEffect(renderer, "8*=+-:. ", { invert: true }));
+        effect[a].setSize(window.innerWidth, window.innerHeight);
+        effect[a].domElement.style.color = "black";
 
-  sphere = new THREE.Mesh(
-     new THREE.TetrahedronGeometry(raggioServer, facceServer),
-     new THREE.MeshPhongMaterial({ color: "green", flatShading: true }));
-     sphere.name = "sphere";
-     scene.add(sphere);
+        // Special case: append effect.domElement, instead of renderer.domElement.
+        // AsciiEffect creates a custom domElement (a div container) where the ASCII elements are placed.
+        document.getElementById("ascicanvas2").appendChild(effect[a].domElement);
+        window.addEventListener("resize", onWindowResize);
+        animate();
+      }
 
-  renderer = new THREE.WebGLRenderer({ alpha: true });
-  renderer.setSize(window.innerWidth, window.innerHeight);
+      function onWindowResize() {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
 
-  effect.push(new AsciiEffect(renderer, "8*=+-:. ", { invert: true }));
-  effect[a].setSize(window.innerWidth, window.innerHeight);
-  effect[a].domElement.style.color = "black";
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        effect[a].setSize(window.innerWidth, window.innerHeight);
+      }
 
-  // Special case: append effect.domElement, instead of renderer.domElement.
-  // AsciiEffect creates a custom domElement (a div container) where the ASCII elements are placed.
-  document.getElementById("ascicanvas2").appendChild(effect[a].domElement);
-  window.addEventListener("resize", onWindowResize);
-  animate();
-}
+      function animate() {
+        requestAnimationFrame(animate);
+        render();
+      }
 
-function onWindowResize() {
-  camera.aspect = window.innerWidth / window.innerHeight;
-  camera.updateProjectionMatrix();
+      function render() {
+        const timer = Date.now() - start;
+        camera.lookAt(cameraTarget);
+        //camera.rotation.x = timer * 0.0008;
+        scene.rotation.y = timer * 0.0005;
 
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  effect[a].setSize(window.innerWidth, window.innerHeight);
-}
+        effect[a].render(scene, camera);
+      }
 
-function animate() {
-  requestAnimationFrame(animate);
-  render();
-}
+      function map_range(value, low1, high1, low2, high2) {
+        return low2 + ((high2 - low2) * (value - low1)) / (high1 - low1);
+      }
 
-function render() {
-  const timer = Date.now() - start;
-  camera.lookAt(cameraTarget);
-  //camera.rotation.x = timer * 0.0008;
-  scene.rotation.y = timer * 0.0005;
+      function lights() {
+        directionalLight1 = new THREE.DirectionalLight(0xffffff);
+        directionalLight1.position.set(10, 800, 500);
+        directionalLight1.intensity = 10;
+        scene.add(directionalLight1);
 
-  effect[a].render(scene, camera);
-
-}
-
-
-function map_range(value, low1, high1, low2, high2) {
-  return low2 + ((high2 - low2) * (value - low1)) / (high1 - low1);
-}
-
-
-function lights() {
-  directionalLight1 = new THREE.DirectionalLight(0xffffff);
-  directionalLight1.position.set(10, 800, 500);
-  directionalLight1.intensity = 10;
-  scene.add(directionalLight1);
-
-  directionalLight2 = new THREE.DirectionalLight(0xffffff);
-  directionalLight2.position.set(-500, -500, -500);
-  scene.add(directionalLight2);
-}
-</script>
-
+        directionalLight2 = new THREE.DirectionalLight(0xffffff);
+        directionalLight2.position.set(-500, -500, -500);
+        scene.add(directionalLight2);
+      }
+    </script>
   </body>
-
-  
 </html>
